--- a/assignment1-cloneCoding-Kakao/assignment1-cloneCoding-Kakao/Resource/Storyboards/TabBarStoryboards/MyTab.storyboard
+++ b/assignment1-cloneCoding-Kakao/assignment1-cloneCoding-Kakao/Resource/Storyboards/TabBarStoryboards/MyTab.storyboard
@@ -76,7 +76,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UR2-td-pHl"/>
-                        <color key="backgroundColor" red="0.52941176470588236" green="0.56862745098039214" blue="0.59607843137254901" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="UR2-td-pHl" firstAttribute="bottom" secondItem="Tmq-P8-V1S" secondAttribute="bottom" constant="14" id="7mm-8U-LXz"/>
                             <constraint firstItem="Uxz-7j-bxn" firstAttribute="top" secondItem="UR2-td-pHl" secondAttribute="top" constant="14" id="7qa-gG-Bwx"/>
